# escaping

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_en.md  _config.yml  config.example.yaml  config.yaml  config.yaml.example  index.html  main.py  plan.md  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: gen_site.yml  sync.yml  trigger.yml
configs/: slug_utils.py
contents/: atom.xml  index.html  robots.txt
contents/blog/: 1-python.html  1-rye-hao-yong-de-python-bao-guan-li-gong-ju.html  10-macapp.html  10-shottr-yuan-sheng-qing-qiao-qie-gong-neng-qiang-da-de-mian-fei-macos-jie-tu-gong-ju.html  11-python-huan-jing-an-zhuang-anaconda-wei-li.html  11-python.html  12-obsidian.html  12-zhong-qi-qing-yong-obsidian.html  13-dataanalysis.html  13-wo-de-di-yi-ge-wan-zheng-de-ji-qi-xue-xi-xiang-mu-titanic-zong-jie.html  14-coke-machine-challenge.html  14-python-cs50p.html  15-vmware.html  15-zong-you-yi-xie-app-zhi-neng-windows-yong.html  16-vim-don-t-be-afraid.html  16-vim.html  17-app-defaults-2023.html  17-macapp.html  18-python-bian-ji-qi-wo-de-vscode-pei-zhi.html  18-python.html  2-dataanalysis-office-excel.html  2-excel-xue-xi-jing-yan-fen-xiang.html  2.html  20-ji-yu-fastapi-de-crud-lian-xi-rss-ding-yue-guan-li.html  20-python-rss.html  21-python-blog.html  21-shi-yong-python-he-github-pages-da-jian-ge-ren-bo-ke.html  22-claim-my-rss-feed-on-follow-a-amazing-rss-reader.html  22.html  23-python.html  24-python-blog.html  (+35 more)
docs/: migration.md
tests/: test_cli.py  test_config.py  test_github_service.py  test_renderer.py  test_template_integrity.py
(+61 files in other folders)
